# platform_driver_ethercat_ros2

./: CMakeLists.txt  README.md  package.xml
config/: marta.yaml  marta_params.yaml  pd_marta.yaml
launch/: platform_driver_ethercat.launch.py
src/: CanDevice.cpp  CanDevice.h  CanDeviceAtiFts.cpp  CanDeviceAtiFts.h  CanDriveTwitter.cpp  CanDriveTwitter.h  EthercatInterface.cpp  EthercatInterface.h  Joint.h  JointActive.cpp  JointActive.h  JointPassive.cpp  JointPassive.h  PlatformDriverEthercat.cpp  PlatformDriverEthercat.h  PlatformDriverEthercatNode.cpp  PlatformDriverEthercatNode.h  PlatformDriverEthercatNodeTypes.h  PlatformDriverEthercatTypes.h  main.cpp  platform_driver_ethercat_types.h
