<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>platform_driver_ethercat_ros2</name>
  <version>0.1.0</version>
  <description>ROS 2 node to interface with platform_driver_ethercat library</description>
  <maintainer email="tim.wiese@esa.int">Tim Wiese</maintainer>
  <license>GPLv3</license>

  <build_depend>platform_driver_ethercat</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rover_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>platform_driver_ethercat</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rover_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
